@@ -1,3 +1,6 @@
+2002-10-22  Cristy  <cristy@mystic.es.dupont.com>
+  * Added large file pixel cache support for Windows NT.
+
 2002-10-21  Leonard Rosenthol <leonardr@lazerware.com>
   * PDF coder no longer uses ASCII85 encoding with TIFF for MUCH smaller
     files!
